k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-natan
  type: NodePort
  ports:
    - name: api-service
      port: 80
      targetPort: 3080
      protocol: TCP
